--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestFirebase">
         <activity
-            android:name=".List_User"
+            android:name=".app.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".app.List_Food"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".app.Food_infor"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".app.Payment"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
